force-app/main/default/objects/Relasi_Cuti__c/Relasi_Cuti__c.object-meta.xml
<CustomObject>
    <description>digunakan sebagai junction untuk pisahkan cuti tahun ini dan tahun depan, serta menampung minus cuti (jika ada hutang cuti tahun lalu)</description>
    <label>Relasi Cuti</label>
    <nameField>
        <displayFormat>{0000000000}</displayFormat>
        <label>No</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Relasi Cuti</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>