force-app/main/default/objects/Relasi_Cuti__c/fields/Cuti_Karyawan__c.field-meta.xml
<CustomField>
    <fullName>Cuti_Karyawan__c</fullName>
    <label>Cuti Karyawan</label>
    <referenceTo>Cuti_Karyawan__c</referenceTo>
    <relationshipLabel>Relasi Cuti</relationshipLabel>
    <relationshipName>Relasi_Cuti</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>