force-app/main/default/objects/Relasi_Cuti__c/fields/Hari__c.field-meta.xml
<CustomField>
    <fullName>Hari__c</fullName>
    <label>Hari</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>