force-app/main/default/objects/Relasi_Cuti__c/fields/Pengajuan_Cuti__c.field-meta.xml
<CustomField>
    <fullName>Pengajuan_Cuti__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Pengajuan Cuti</label>
    <referenceTo>Request_Leave__c</referenceTo>
    <relationshipLabel>Relasi Cuti</relationshipLabel>
    <relationshipName>Relasi_Cuti</relationshipName>
    <type>Lookup</type>
</CustomField>